--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/index.77a9bc14.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.be4b0254.ico">
-    <script src="/experiences.e82f28a0.js" defer=""></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <script src="js/script.js" defer type="module"></script>
     <title>Li Lian's Portfolio</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
                 <div>
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
-                        <li><a href="/work.html">Work</a></li>
-                        <li><a href="/experiences.html">Experiences</a></li>
+                        <li><a href="work.html" >Work</a></li>
+                        <li><a href="experiences.html">Experiences</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <div>
                     <div id="photo">
                         <div id="shape"></div>
-                        <img src="/photo.3fe1a2a9.png" alt="My Photograph">
+                        <img src="images/photo.png" alt="My Photograph" />
                     </div>
                     
                     <div class="info age">
@@ -57,10 +57,10 @@
                 <h2>I'm Ho Li Lian.</h2>
                 <h2>A developer</h2>
                 <h2><span>based in Singapore.</span></h2>
-                <br>
+                <br />
                 <p>Welcome to my <strong>portfolio</strong>.</p>
                 <p>I am extremely <strong>passionate</strong> and a <strong>hardworker</strong>. I am a <strong>jack of all trades</strong> that is able to pick up new skills and deliver <strong>high-quality</strong> features <strong>fast</strong>.</p>
-                <a href="/work.html"><button><p>My Work</p></button></a>
+                <a href="work.html"><button><p>My Work</p></button></a>
             </div>
         </section>
     </div>
