--- a/Portfolio/work.html
+++ b/Portfolio/work.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.77a9bc14.css">
-    <link rel="stylesheet" href="/work.0fc843d5.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.be4b0254.ico">
-    <script src="/experiences.e82f28a0.js" defer=""></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/work.scss" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <script src="js/script.js" defer type="module"></script>
     <title>Li Lian's Portfolio</title>
 </head>
 
 <body>
     <nav id="navigation">
-        <a href="/index.html" class="logo">LI LIAN<span>.</span></a>
+        <a href="index.html" class="logo">LI LIAN<span>.</span></a>
         <a class="hamburger-button">
             <div class="bar1"></div>
             <div class="bar2"></div>
@@ -25,9 +25,9 @@
             <div class="overlay-menu">
                 <div>
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#" class="active">Work</a></li>
-                        <li><a href="/experiences.html">Experiences</a></li>
+                        <li><a href="experiences.html">Experiences</a></li>
                     </ul>
                 </div>
             </div>
