--- a/DigitalPortfolio/workcontent.html
+++ b/DigitalPortfolio/workcontent.html
@@ -32,6 +32,18 @@
             </div>
         </div>
     </nav>
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <div class="page">
         <section class="workcontent">
             <div id="videoContainer">
