--- a/DigitalPortfolio/workcontent.html
+++ b/DigitalPortfolio/workcontent.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="js/script.js" defer type="module"></script>
-    <title>Li Lian's Portfolio</title>
+    <title>Work Content | LL's Portfolio</title>
 </head>
 
 <body>
