--- a/DigitalPortfolio/index.html
+++ b/DigitalPortfolio/index.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="work.html">Work</a></li>
-                        <!-- <li><a href="experiences.html">Experiences</a></li> -->
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
