--- a/DigitalPortfolio/work.html
+++ b/DigitalPortfolio/work.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="index.html" >Home</a></li>
                         <li><a href="#" class="active">Work</a></li>
-                        <!-- <li><a href="experiences.html">Experiences</a></li> -->
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
