--- a/DigitalPortfolio/workcontent.html
+++ b/DigitalPortfolio/workcontent.html
@@ -26,7 +26,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="work.html">Work</a></li>
-                        <!-- <li><a href="#" class="active">Experiences</a></li> -->
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -98,7 +98,9 @@
             </div>
             <div class="workNavButtons">
                 <a id="prevProject" class="button"><span>Prev Project</span><i></i></a>
-                <a href="work.html" class="button"><span>&#x2302;</span><i></i></a>
+                <a href="work.html" class="button"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M21 13v10h-6v-6h-6v6h-6v-10h-3l12-12 12 12h-3zm-1-5.907v-5.093h-3v2.093l3 3z" />
+                </svg></span><i></i></a>
                 <a id="nextProject" class="button"><span>Next Project</span><i></i></a>
             </div>
         </section>
