Fixed dragging thing

--- a/DigitalPortfolio/work.html
+++ b/DigitalPortfolio/work.html
@@ -44,7 +44,15 @@
             <li></li>
             <li></li>
         </ul>
-        <h2><span>My Work</span></h2>
+        <div class="work-title">
+            <h2><span>My Work</span></h2>
+            <h3><strong>Click</strong> and <strong>Drag</strong> anywhere on this page to Scroll through my projects!</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill"
+                viewBox="0 0 16 16">
+                <path
+                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+            </svg>
+        </div>
         <section class="work">
             <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
                 <div class="work-image">
