--- a/DigitalPortfolio/work.html
+++ b/DigitalPortfolio/work.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
     <title>Work | LL's Portfolio</title>
 </head>
+
 <body>
     <nav id="navigation">
         <a href="index.html" class="logo">LI LIAN<span>.</span></a>
@@ -18,12 +20,12 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
         </a>
-    
+
         <div class="nav-overlay">
             <div class="overlay-menu">
                 <div>
                     <ul>
-                        <li><a href="index.html" >Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#" class="active">Work</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -46,32 +48,65 @@
         </ul>
         <div class="work-title">
             <h2><span>My Work</span></h2>
-            <h3><strong>Click</strong> and <strong>Drag</strong> anywhere on this page to Scroll through my projects!</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill"
-                viewBox="0 0 16 16">
+            <h3><strong>Click</strong> and <strong>Drag</strong> anywhere on this page to Scroll through my projects!
+            </h3>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                 <path
                     d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
             </svg>
         </div>
         <section class="work">
             <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-                <div class="work-image">
+                <div class="work-image selected">
                     <div class="slideInfo">
-                        <div><h2>Operation I.C.C.</h2>
-                        <p>A 3D Game made using C++ in OpenGL</p></div>
+                        <div>
+                            <h2>Hero Killer</h2>
+                            <p>A 3D action side-scroller developed using Unreal Engine</p>
+                        </div>
                         <a href="workcontent.html?id=0" class="button"><span>View Project</span><i></i></a>
                     </div>
-                    <img src="images/1_SP2.jpg" draggable="false" />
+                    <img src="images/1_HeroKiller.png" draggable="false" />
                 </div>
-                <div class="work-image selected">
+                <div class="work-image">
+                    <div class="slideInfo">
+                        <div>
+                            <h2>Flooded Fables</h2>
+                            <p>A multiplayer puzzle RPG made using Unreal Engine over the course of 3 months</p>
+                        </div>
+                        <a href="workcontent.html?id=1" class="button"><span>View Project</span><i></i></a>
+                    </div>
+                    <img src="images/2_FloodedFables.png" draggable="false" />
+                </div>
+                <div class="work-image">
+                    <div class="slideInfo">
+                        <div>
+                            <h2>Mystic Munchies</h2>
+                            <p>An adorable fast-paced mobile cooking game developed over 1 week</p>
+                        </div>
+                        <a href="workcontent.html?id=2" class="button"><span>View Project</span><i></i></a>
+                    </div>
+                    <img src="images/3_MysticMunchies.png" draggable="false" />
+                </div>
+                <div class="work-image">
+                    <div class="slideInfo">
+                        <div>
+                            <h2>Operation I.C.C.</h2>
+                            <p>A 3D Game made using C++ in OpenGL</p>
+                        </div>
+                        <a href="workcontent.html?id=3" class="button"><span>View Project</span><i></i></a>
+                    </div>
+                    <img src="images/4_SP2.jpg" draggable="false" />
+                </div>
+                <div class="work-image">
                     <div class="slideInfo">
                         <div>
                             <h2>Hollow Knight Remake</h2>
                             <p>A 2D Game made using C# in Unity</p>
                         </div>
-                        <a href="workcontent.html?id=1" class="button"><span>View Project</span><i></i></a>
+                        <a href="workcontent.html?id=4" class="button"><span>View Project</span><i></i></a>
                     </div>
-                    <img src="images/2_HollowKnight.png" draggable="false" />
+                    <img src="images/5_HollowKnight.png" draggable="false" />
                 </div>
                 <div class="work-image">
                     <div class="slideInfo">
@@ -79,12 +114,13 @@
                             <h2>VTuber Website</h2>
                             <p>A fullstack website made with HTML, CSS, Javascript and MySQL Database</p>
                         </div>
-                        <a href="workcontent.html?id=2" class="button"><span>View Project</span><i></i></a>
+                        <a href="workcontent.html?id=5" class="button"><span>View Project</span><i></i></a>
                     </div>
-                    <img src="images/3_VTuberWeb.png" draggable="false" />
+                    <img src="images/6_VTuberWeb.png" draggable="false" />
                 </div>
             </div>
         </section>
     </div>
 </body>
+
 </html>
