Added hypercasual games

--- a/DigitalPortfolio/contact.html
+++ b/DigitalPortfolio/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
     <title>Contact | LL's Portfolio</title>
 </head>
+
 <body>
     <nav id="navigation">
         <a href="index.html" class="logo">LI LIAN<span>.</span></a>
@@ -18,7 +20,7 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
         </a>
-    
+
         <div class="nav-overlay">
             <div class="overlay-menu">
                 <div>
@@ -54,21 +56,26 @@
                 </div>
                 <div>
                     <a href="tel:86568865" class="contactInfo" target="_blank" rel="noopener noreferrer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="currentColor">
                             <path
                                 d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3.445 17.827c-3.684 1.684-9.401-9.43-5.8-11.308l1.053-.519 1.746 3.409-1.042.513c-1.095.587 1.185 5.04 2.305 4.497l1.032-.505 1.76 3.397-1.054.516z" />
                         </svg>
                         <p>+65 8656 8865</p>
                     </a>
-                    <a href="mailto:hlilian1468@gmail.com" target="_blank" class="contactInfo" rel="noopener noreferrer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <a href="mailto:hlilian1468@gmail.com" target="_blank" class="contactInfo"
+                        rel="noopener noreferrer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="currentColor">
                             <path
                                 d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z" />
                         </svg>
                         <p>hlilian1468@gmail.com</p>
                     </a>
-                    <a href="https://www.linkedin.com/in/li-lian-ho/" class="contactInfo" target="_blank" rel="noopener noreferrer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <a href="https://www.linkedin.com/in/li-lian-ho/" class="contactInfo" target="_blank"
+                        rel="noopener noreferrer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="currentColor">
                             <path
                                 d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
                         </svg>
@@ -79,4 +86,5 @@
         </section>
     </div>
 </body>
+
 </html>
