--- a/DigitalPortfolio/work.html
+++ b/DigitalPortfolio/work.html
@@ -61,22 +61,22 @@
                 <div class="work-image selected">
                     <div class="slideInfo">
                         <div>
-                            <h2>Hero Killer</h2>
-                            <p>A 3D action side-scroller developed using Unreal Engine</p>
+                            <h2>Flooded Fables</h2>
+                            <p>A multiplayer puzzle RPG made using Unreal Engine over the course of 3 months</p>
                         </div>
                         <a href="workcontent.html?id=0" class="button"><span>View Project</span><i></i></a>
                     </div>
-                    <img src="images/1_HeroKiller.png" draggable="false" />
+                    <img src="images/2_FloodedFables.png" draggable="false" />
                 </div>
                 <div class="work-image">
                     <div class="slideInfo">
                         <div>
-                            <h2>Flooded Fables</h2>
-                            <p>A multiplayer puzzle RPG made using Unreal Engine over the course of 3 months</p>
+                            <h2>Hero Killer</h2>
+                            <p>A 3D action side-scroller developed using Unreal Engine</p>
                         </div>
                         <a href="workcontent.html?id=1" class="button"><span>View Project</span><i></i></a>
                     </div>
-                    <img src="images/2_FloodedFables.png" draggable="false" />
+                    <img src="images/1_HeroKiller.png" draggable="false" />
                 </div>
                 <div class="work-image">
                     <div class="slideInfo">
@@ -91,10 +91,20 @@
                 <div class="work-image">
                     <div class="slideInfo">
                         <div>
+                            <h2>Hypercasual Games</h2>
+                            <p>A collection of 3 Hypercasual Games developed over hte course of 3 months</p>
+                        </div>
+                        <a href="workcontent.html?id=3" class="button"><span>View Project</span><i></i></a>
+                    </div>
+                    <img src="images/4_HypercasualGames.png" draggable="false" />
+                </div>
+                <div class="work-image">
+                    <div class="slideInfo">
+                        <div>
                             <h2>Operation I.C.C.</h2>
                             <p>A 3D Game made using C++ in OpenGL</p>
                         </div>
-                        <a href="workcontent.html?id=3" class="button"><span>View Project</span><i></i></a>
+                        <a href="workcontent.html?id=4" class="button"><span>View Project</span><i></i></a>
                     </div>
                     <img src="images/4_SP2.jpg" draggable="false" />
                 </div>
@@ -104,7 +114,7 @@
                             <h2>Hollow Knight Remake</h2>
                             <p>A 2D Game made using C# in Unity</p>
                         </div>
-                        <a href="workcontent.html?id=4" class="button"><span>View Project</span><i></i></a>
+                        <a href="workcontent.html?id=5" class="button"><span>View Project</span><i></i></a>
                     </div>
                     <img src="images/5_HollowKnight.png" draggable="false" />
                 </div>
@@ -114,7 +124,7 @@
                             <h2>VTuber Website</h2>
                             <p>A fullstack website made with HTML, CSS, Javascript and MySQL Database</p>
                         </div>
-                        <a href="workcontent.html?id=5" class="button"><span>View Project</span><i></i></a>
+                        <a href="workcontent.html?id=6" class="button"><span>View Project</span><i></i></a>
                     </div>
                     <img src="images/6_VTuberWeb.png" draggable="false" />
                 </div>
