Update Work Content with new videos

--- a/DigitalPortfolio/index.html
+++ b/DigitalPortfolio/index.html
@@ -110,6 +110,7 @@
                     drawing, or even
                     creating a <strong>new game</strong> as a passion
                     project.</p>
+                <p>This website is currently a <strong>Work In Progress</strong>! Expect an overhaull soon!</p>
                 <br />
                 <div>
                     <a href="work.html" class="button"><span>My Work</span><i></i></a>
