--- a/DigitalPortfolio/index.html
+++ b/DigitalPortfolio/index.html
@@ -71,7 +71,7 @@
         <section class="about">
             <div>
                 <h2>About <br>Ho Li Lian</h2>
-                <div class="photo-item">
+                <!-- <div class="photo-item">
                     <div>
                         <div id="photo-bg">
                             <section class="patternbg"></section>
@@ -83,7 +83,7 @@
                             <img id="photo" alt="Photo" src="images/photo-colored.png" />
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div>
                 <p>I am an aspiring<span> game developer </span>based in Singapore, having recently graduated from
