--- a/DigitalPortfolioStatic/work.html
+++ b/DigitalPortfolioStatic/work.html
@@ -112,7 +112,7 @@
                     <div class="slideInfo">
                         <div>
                             <h2>Hollow Knight Remake</h2>
-                            <p>A 2D Game made using C# in Unity</p>
+                            <p>A 2D Game made using C++ in OpenGL</p>
                         </div>
                         <a href="workcontent.html?id=5" class="button"><span>View Project</span><i></i></a>
                     </div>
